[tool.poetry]
name = "mk-network"
version = "0.2.0"
description = "Simple pure Python package for generating, modifying and playing with (even complex) networks"
authors = ["Matej Kerekrety <matej.kerekrety@gmail.com>"]
packages = [
    { include = "network" }
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.23.5"
networkx = "^2.8.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
